# Open-Head

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Stylesheets/: CMakeLists.txt
build-widget-Desktop_Qt_6_2_2_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
cmake/: Docs.cmake
device/: CMakeLists.txt  control_head.cpp  control_head.h  control_motor.cpp  control_motor.h  devices_manager.cpp  devices_manager.h  subsystemairpressure.cpp  subsystemairpressure.h  subsystemhead.cpp  subsystemhead.h  subsystemmotors.cpp  subsystemmotors.h  usbmanager.cpp  usbmanager.h
docking/: CMakeLists.txt  docking.cpp
docking/xxx/: docking.h
docs/: Doxyfile
docs/html/: graph_legend.html  index.html
dpi/: CMakeLists.txt  dpi_manager.cpp  dpi_manager.h  png_manager.cpp  png_manager.h
logger/: CMakeLists.txt  call_once.h  logger.cpp  logger.h  singleton.h
model/: CMakeLists.txt  model_data.cpp  model_data.h  model_variable.cpp  model_variable.h  pixel_format.cpp  pixel_format.h  zaar_alghorithm.cpp  zaar_alghorithm.h
painting/: CMakeLists.txt  factoryshape.cpp  factoryshape.h  ground.cpp  ground.h  painting_ground.cpp  painting_ground.h  ruler.cpp  ruler.h  shape.cpp  shape.h
plotting/: CMakeLists.txt  monitor.cpp  monitor.h  plotting_data.cpp  plotting_data.h
png/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
turn-on-of/: CMakeLists.txt  turn_on.cpp  turn_on.h
widget/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  ribbon.cpp  ribbon.h  ribbonform.cpp  ribbonform.h  ribbonform.ui  widget_chart.cpp  widget_chart.h
